<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.phillip.taskloot.AddTaskActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:text="@string/task_name_text"
            android:id="@+id/taskNameTextView"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="18dp"/>

    <EditText
            android:layout_toRightOf="@+id/taskNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/task_hint_text"
            android:ems="10"
            android:id="@+id/taskNameText"
            android:layout_toEndOf="@+id/taskNameTextView"
            android:layout_alignBaseline="@+id/taskNameTextView"
            android:layout_marginRight="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskNameTextView"
            android:text="@string/task_type_text"
            android:id="@+id/taskTypeTextView"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="18dp"/>

    <TextView
            android:id="@+id/dividingLine"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/taskTypeTextView"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dividingLine"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:id="@+id/radio_group_type">
        <RadioButton android:id="@+id/radio_daily"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/daily"
                     android:checked="true"/>
        <RadioButton android:id="@+id/radio_weekly"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/weekly"
                     android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group_type"
            android:text="@string/task_occurences"
            android:id="@+id/taskOccurencesTextView"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="18dp"/>

    <TextView
            android:id="@+id/dividingLine2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/taskOccurencesTextView"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dividingLine2"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"></NumberPicker>

</RelativeLayout>
